chinh sua index.html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
     <script src="./models/NguoiDung.js"></script>
     <script src="./models/KhoaHoc.js"></script>
+    <script src="./models/NguoiDung.js"></script>
+    <script src="./models/KhoaHoc.js"></script>
+    
     <script src="./index.js"></script>
 </body>
 </html>
